[package]
name = "aster_boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9.4"
buddy_system_allocator = { version = "0.10", default-features = false, features = ["alloc"] }

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { version = "0.11.1", features = ["s-mode"] }
sbi-rt = { version = "0.0.3", features = ["legacy"] }
fdt = { workspace = true }
