[package]
name = "rt_aster_boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
aster_boot = { workspace = true }

[target.riscv64gc-unknown-none-elf.dependencies]
#riscv = { version = "0.11.1", features = ["s-mode"] }
#sbi-rt = { version = "0.0.3", features = ["legacy"] }
fdt = { version = "0.1.5", features = ["pretty-printing"] }
