[package]
name = "axalloc"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS global memory allocator"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axalloc"
documentation = "https://rcore-os.github.io/arceos/axalloc/index.html"

[features]
default = ["tlsf"]
tlsf = ["allocator/tlsf"]


[dependencies]
axlog2 = { git = "ssh://git@github.com/shilei-massclouds/axlog2" }
cfg-if = "1.0"
spinbase = { git = "ssh://git@github.com/shilei-massclouds/spinbase" }
memory_addr = { git = "ssh://git@github.com/shilei-massclouds/memory_addr" }
allocator = { git = "ssh://git@github.com/shilei-massclouds/allocator" }
axerrno = { git = "ssh://git@github.com/shilei-massclouds/axerrno" }
axhal = { git = "ssh://git@github.com/shilei-massclouds/axhal" }
axstd = {  path = "../../axstd" , features = ["print"]} 
