[package]
name = "block_loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spinbase = { git = "ssh://git@github.com/shilei-massclouds/spinbase.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
task = { git = "ssh://git@github.com/shilei-massclouds/task" }
axerrno = { git = "ssh://git@github.com/shilei-massclouds/axerrno" }
