[package]
name = "block_loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9"
spinpreempt = { git = "ssh://git@github.com/shilei-massclouds/spinpreempt" }
mutex = { git = "ssh://git@github.com/shilei-massclouds/mutex" }
axfile = { git = "ssh://git@github.com/shilei-massclouds/axfile" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
task = { git = "ssh://git@github.com/shilei-massclouds/task" }
axerrno = { git = "ssh://git@github.com/shilei-massclouds/axerrno" }
