[package]
name = "axfs_pipefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9"
log = "0.4"
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
lazy_init = { git = "ssh://git@github.com/shilei-massclouds/lazy_init.git" }
