[package]
name = "procfs"
version = "0.1.0"
edition = "2021"
description = "Proc filesystem"
license = "GPL-3.0-or-later OR Apache-2.0"

[dependencies]
spin = "0.9"
log = "0.4"
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
task = { git = "ssh://git@github.com/shilei-massclouds/task" }
mm = { git = "ssh://git@github.com/shilei-massclouds/mm" }
axfile = { git = "ssh://git@github.com/shilei-massclouds/axfile" }
