[package]
name = "rt_ramfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_boot = { git = "ssh://git@github.com/shilei-massclouds/arch_boot.git" }
axlog2 = { git = "ssh://git@github.com/shilei-massclouds/axlog2.git" }
axtype = { git = "ssh://git@github.com/shilei-massclouds/axtype.git" }
axhal = { git = "ssh://git@github.com/shilei-massclouds/axhal.git" }
axalloc = { git = "ssh://git@github.com/shilei-massclouds/axalloc.git" }
axfs_vfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_vfs.git" }
axfs_ramfs = { git = "ssh://git@github.com/shilei-massclouds/axfs_ramfs.git" }
