[package]
name = "rt_hello"
version = "0.1.0"
edition = "2021"
authors = ["xuejianxin <xuejianxinokok@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#arch_boot = { git = "ssh://git@github.com/shilei-massclouds/arch_boot.git" }
hello = { path = "../hello" }
