[package]
name = "rt_hello"
version = "0.1.0"
edition = "2021"
authors = ["xuejianxin <xuejianxinokok@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arch_boot = {path = "../../arch_boot/arch_boot"  }
hello = { path = "../hello" }
# early_console = { path = "../../early_console/early_console" }
