[package]
name = "rt_loader"
version = "0.1.0"
edition = "2021"

[features]
default = ["axstd"]
[dependencies]
axstd = { path = "../../axstd/axstd",features=["alloc"], optional = true }
axlog2 = { path = "../../axlog2/axlog2" }
arch_boot = {path = "../../arch_boot/arch_boot"  }
axconfig = { path = "../../axconfig/axconfig" }
axhal = { path = "../../axhal/axhal" }
axtrap = { path = "../../axtrap/axtrap" }
axalloc = { path = "../../axalloc/axalloc" }
task = { path = "../../task/task" }
page_table = { path = "../../page_table/page_table" }
mm = { path = "../../mm/mm"}
memory_addr = { path = "../../memory_addr/memory_addr" }
elf = { version = "0.7.3", default-features = false }

# axtask = { path = "../../axtask/axtask" }

#axsyscall = { path = "../../axsyscall/axsyscall" }
#run_queue = { path = "../../run_queue/run_queue" }
#axdriver = { path = "../../axdriver/axdriver" }
#axmount = { path = "../../axmount/axmount" }
#percpu2 ={ path = "../../percpu2/percpu2" }
fork ={ path = "../../fork/fork" }
exec = { path = "../../exec/exec" }
#axerrno = { path = "../../axerrno/axerrno" }
#axtype ={ path = "../../axtype/axtype" }
#axdtb = { path = "../../axdtb/axdtb" }
#preempt_guard ={ path = "../../preempt_guard/preempt_guard" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"